<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/thirdActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdActivityButton" />

        <Button
            android:id="@+id/secondActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondActivityButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text" />

            <EditText
                android:id="@+id/description"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>